# defi-platform

./: .gitignore  .pre-commit-config.yaml  Dockerfile  alembic.ini  docker-compose.yml  proxies.csv  pyproject.toml  requirements.txt
.circleci/: config.yml
alembic/: env.py
alembic/versions/: 016d99cad3b6_added_update_models.py  023fc481d598_added_fk_to_aggregbalanceupdate.py
resources/: user_agents.txt
src/: addresses.py  aggregated_assets.py  coin_changes.py  config.py  data.py  debank.py  enums.py  exceptions.py  export.csv  historical_address.ipynb  http_utils.py  main.py  math_utils.py  moralis_utils.py  performance.py  performance_calculations.py  runner.py  schemas.py  spec.py  test.py  time_utils.py  token_history.py
src/api/: cli.py  factory.py
src/api/core/: config.py  dependencies.py
src/api/routers/v1/: __init__.py  addresses.py  traders.py
src/crud/: addresses.py  blockchains.py  tokens.py
src/database/: db.py  models.py  services.py
src/token_balances/: aggregated_assets.py  debank.py  nasnen_portfolio.py  token_history.py  zapper.py
src/token_balances/transpose_all/: contract_info.py  data.py  trader_backtest.py  trades.pkl  transpose_common.py
tests/test_acceptance/: test_coin_changes_acceptance.py  test_debank_acceptance.py  test_performance_calculations_acceptance.py
tests/test_data/: debank_balances.json  debank_integrated_aggregated_balances.json  debank_protocols.json
tests/test_unit/: fixtures.py  test_asset_aggregation_unit.py  test_coin_changes_unit.py  test_converting_models_unit.py  test_debank_unit.py  test_performance_calculations_unit.py  test_running_unit.py  test_saving_models_unit.py  test_token_history.py  test_trader_backtest.py  utils.py
