[tool.poetry]
name = "crypto_platform"
version = "0.1.0"
description = ""
authors = ["Tomas Toth <tomas.toth004@gmail.com>"]
license = "MIT"
packages = [{"include"="src"}]

[tool.poetry.dependencies]
python = "^3.10"
aiohttp = "^3.8.3"
SQLAlchemy = "^1.4.44"
python-dotenv = "^0.21.0"
psycopg2-binary = "^2.9.5"
asyncpg = "^0.27.0"
pytest = "^7.2.0"
pydantic = "^1.10.2"
pytest-asyncio = "^0.20.2"

[tool.poetry.dev-dependencies]
black = "^22.10.0"
wps-light = "^0.16.1"
mypy = "^0.991"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
